--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -81,6 +81,6 @@
     <!--Make PROD profile active-->
     <context-param>
         <param-name>spring.profiles.default</param-name>
-        <param-value>prod</param-value>
+        <param-value>dev</param-value>
     </context-param>
 </web-app>
