--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-    
+
     <display-name>java-blog-aggregator</display-name>
-    
+
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
@@ -19,7 +19,7 @@
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
-<!--        <url-pattern>*.html</url-pattern>-->
+        <!--        <url-pattern>*.html</url-pattern>-->
     </servlet-mapping>
 
     <!--This listener searches for the file 'applicationContext.xml'-->
@@ -28,18 +28,18 @@
     </listener>
 
     <!--This filter is used to get rid of LazyInitializationException but it should not be used as it is not recommended and not a proper way-->
-<!--    <filter>-->
-<!--        <filter-name>oemInViewFilter</filter-name>-->
-<!--        <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>-->
-<!--        <init-param>-->
-<!--            <param-name>EntityManagerFactoryBeanName</param-name>-->
-<!--            <param-value>entityManagerFactory</param-value>-->
-<!--        </init-param>-->
-<!--    </filter>-->
-<!--    <filter-mapping>-->
-<!--        <filter-name>oemInViewFilter</filter-name>-->
-<!--        <url-pattern>/*</url-pattern>-->
-<!--    </filter-mapping>-->
+    <!--    <filter>-->
+    <!--        <filter-name>oemInViewFilter</filter-name>-->
+    <!--        <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>-->
+    <!--        <init-param>-->
+    <!--            <param-name>EntityManagerFactoryBeanName</param-name>-->
+    <!--            <param-value>entityManagerFactory</param-value>-->
+    <!--        </init-param>-->
+    <!--    </filter>-->
+    <!--    <filter-mapping>-->
+    <!--        <filter-name>oemInViewFilter</filter-name>-->
+    <!--        <url-pattern>/*</url-pattern>-->
+    <!--    </filter-mapping>-->
 
     <!--Spring Filter to force UTF-8 encoding-->
     <filter>
@@ -81,6 +81,6 @@
     <!--Make PROD profile active-->
     <context-param>
         <param-name>spring.profiles.default</param-name>
-        <param-value>prod</param-value>
+        <param-value>test</param-value>
     </context-param>
 </web-app>
